--- a/index.html
+++ b/index.html
@@ -4,25 +4,20 @@
 <head>
     <title>Charles River Mutual Aid</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div id="titleBar">
-        <h1>Charles River Mutual Aid Program<h1></h1>
+        <h1>Charles River Mutual Aid Program</h1>
     </div>
-
     <nav>
-
     </nav>
-
-
     <div id="mainBody">
         <div id="links">
-
             <h2>Links</h2>
-
             <h3>Request Aid</h3>
             <p>If you are looking for assistance from the community, please fill out the <a
                     href="https://forms.gle/BsuShvyQSX24ksDdA">this form!</a>
@@ -30,7 +25,6 @@
             <h3>Offer Aid</h3>
             <p>If you are able to offer any help to people in the area, please fill out the <a
                     href="https://forms.gle/ZD93XMMiNZmo6Rg17">this form!</a>
-
             </p>
             <h3>List of Participants</h3>
             <p> <a
@@ -40,7 +34,6 @@
                 that you can help / can help you and get in touch with them!
             </p>
         </div>
-
         <div id="introDiv">
             <p id="intro">
                 With the World Health Organization declaring the current Coronavirus (COVID-19) outbreak a global
@@ -51,7 +44,8 @@
                 storage
                 space, although this is limited. We will be pooling funds in a Mutual Aid Fund to purchase food, medical
                 supplies, and other necessities, and organizing to provide these resources to the community. </br></br>
-
+            </p>
+            <p>
                 The current pandemic is something that we in the United States have never had to deal with before, and
                 the
                 times ahead will be difficult for millions of people. While our culture encourages
@@ -60,15 +54,21 @@
                 isolate ourselves. Now more than ever, we must come together to support each other—students, workers,
                 faculty, and community members alike—as the government becomes increasingly unable to provide basic
                 resources. </br></br>
-
-                Join us in our Mutual Aid Program to serve the people and fight back against COVID-19!</p>
+            </p>
+            <p>
+                We know the virus is going to affect some people more than others. The rich and the powerful will get
+                it too, but they will have access to medical care and resources that <a href="https://www.kff.org/uninsured/issue-brief/key-facts-about-the-uninsured-population/">
+                  tens millions of people in the U.S. do not have. 
+                </a>. We know how the U.S. government handles similar situations - we saw Katrina in New Orleans, where
+                white residents were evacuated and the majority-Black Ninth Ward was devastated. The hurricane itself was a natural
+                disaster, but the effects it had on people were man-made.
+            </p>
+            <p>
+                Join us in our Mutual Aid Program to serve the people and fight back against COVID-19! If we want to
+                avoid a disaster we have to urgently organize to meet the needs of the people which the government
+                and big institutions are going to neglect.
+            </p>
         </div>
     </div>
-
 </body>
-
-<footer>
-    <script src="main.js"></script>
-</footer>
-
 </html>
