added removal form

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                     people
                     that you can help / can help you and get in touch with them!
                 </p>
+
+                <h3>Remove From List</h3>
+                <p> If you no longer need / can give aid, please fill out <a href="https://forms.gle/vqkTaKbmbYXjaJVL8">this form!</a>
+                </p>
             </div>
             <div id="introDiv">
                 <p id="intro">
