made it even prettier

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Acme|Cinzel|Merriweather|Permanent+Marker|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Acme|Cinzel|Merriweather|Oswald|Noto+Serif|Permanent+Marker|Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
