added back gofundme because it is not lame

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                     that you can help / can help you and get in touch with them!
                 </p>
 
-                <!--<h3>Donate to the Mutual Aid Fund</h3>
+                <h3>Donate to the Mutual Aid Fund</h3>
                 <p> If you have any spare funds that you are able to donate to people in financial need, please donate to our <a href="https://www.gofundme.com/f/98jv7-help-boston-students-and-residents-through-covid">gofundme!</a>
-                </p>-->
+                </p>
 
                 <h3>Remove From List</h3>
                 <p> If you no longer need / can give aid, please fill out <a href="https://forms.gle/vqkTaKbmbYXjaJVL8">this form!</a>
