added email to website

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 <h3>Remove From List</h3>
                 <p> If you no longer need / can give aid, please fill out <a href="https://forms.gle/vqkTaKbmbYXjaJVL8">this form!</a>
                 </p>
+
+                <h3>Contact Us!</h3>
+                <p>If you need more info or have any questions, email us at crmutaid@gmail.com!</p>
             </div>
             <div id="introDiv">
                 <p id="intro">
