CSS tweaks, add links to things on west coast

--- a/index.html
+++ b/index.html
@@ -42,9 +42,21 @@
                 <h3>Remove From List</h3>
                 <p> If you no longer need / can give aid, please fill out <a href="https://forms.gle/vqkTaKbmbYXjaJVL8">this form!</a>
                 </p>
-
+                <h3>Campaigns in Other Cities</h3>
+                  <p>
+                    People here in Boston aren't the only ones dealing with this crisis and getting organized. In the Bay
+                    Area, which has one of the largest homeless populations in the country, people are getting organized to
+                    push the city government to take care of homeless residents. <a
+                                                                                   href="https://www.change.org/p/board-of-supervisors-alameda-county-alameda-and-sf-county-stop-all-evictions-during-the-covid-19-crisis">
+                      Sign their petition
+                    </a> and consider <a href="https://www.gofundme.com/f/n3pe3-relief-for">
+                      donating to their mutual aid fund
+                    </a>
+                  </p>
                 <h3>Contact Us!</h3>
-                <p>If you need more info or have any questions, email us at crmutaid@gmail.com!</p>
+                <p>If you need more info or have any questions, email us at <a href="mailto:crmutaid@gmail.com">
+                    crmutaid@gmail.com
+                </a>!</p>
             </div>
             <div id="introDiv">
                 <p id="intro">
@@ -93,5 +105,4 @@
         </div>
     </div>
 </body>
-
 </html>
