Added BU protest link

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                 <p>If you need more info or have any questions, email us at crmutaid@gmail.com!</p>
             </div>
             <div id="introDiv">
+                <h2 style="padding-bottom: 0px; margin-bottom: 0px;">BU Student Action</h2>
+                <p style="padding-top: 0px; margin-top: 0px;">BUSAU is holding a <a href="https://www.facebook.com/events/575569529716402/">protest against evicting students from their dorms</a></br></p>
                 <p id="intro">
                     With the World Health Organization declaring the current Coronavirus (COVID-19) outbreak a global
                     pandemic,
