add a link to RUF covid blog

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
                       donating to their mutual aid fund
                     </a>
                   </p>
+                  <p>
+                    The Revolutionary United Front has started a special blog with updates about Coronavirus
+                    from a revolutionary political perspective. Check it out <a href="https://revolutionaryunitedfront.com/coronavirus/">
+                      here!
+                    </a>
+                  </p>
                 <h3>Contact Us!</h3>
                 <p>If you need more info or have any questions, email us at <a href="mailto:crmutaid@gmail.com">
                     crmutaid@gmail.com
