--- a/index.html
+++ b/index.html
@@ -42,27 +42,27 @@
                 <h3>Remove From List</h3>
                 <p> If you no longer need / can give aid, please fill out <a href="https://forms.gle/vqkTaKbmbYXjaJVL8">this form!</a>
                 </p>
-                <h3>Campaigns in Other Cities</h3>
-                  <p>
-                    People here in Boston aren't the only ones dealing with this crisis and getting organized. In the Bay
-                    Area, which has one of the largest homeless populations in the country, people are getting organized to
-                    push the city government to take care of homeless residents. <a
-                                                                                   href="https://www.change.org/p/board-of-supervisors-alameda-county-alameda-and-sf-county-stop-all-evictions-during-the-covid-19-crisis">
-                      Sign their petition
-                    </a> and consider <a href="https://www.gofundme.com/f/n3pe3-relief-for">
-                      donating to their mutual aid fund
-                    </a>
-                  </p>
-                  <p>
-                    The Revolutionary United Front has started a special blog with updates about Coronavirus
-                    from a revolutionary political perspective. Check it out <a href="https://revolutionaryunitedfront.com/coronavirus/">
-                      here!
-                    </a>
-                  </p>
                 <h3>Contact Us!</h3>
                 <p>If you need more info or have any questions, email us at <a href="mailto:crmutaid@gmail.com">
-                    crmutaid@gmail.com
+                  crmutaid@gmail.com
                 </a>!</p>
+                <h3>Related Organizations</h3>
+                <p>
+                People here in Boston aren't the only ones dealing with this crisis and getting organized. In the Bay
+                Area, which has one of the largest homeless populations in the country, people are getting organized to
+                push the city government to take care of homeless residents. <a
+                                                                               href="https://www.change.org/p/board-of-supervisors-alameda-county-alameda-and-sf-county-stop-all-evictions-during-the-covid-19-crisis">
+                  Sign their petition
+                </a> and consider <a href="https://www.gofundme.com/f/n3pe3-relief-for">
+                  donating to their mutual aid fund
+                </a>
+                </p>
+                <p>
+                The Revolutionary United Front has started a special blog with updates about Coronavirus
+                from a revolutionary political perspective. Check it out <a href="https://revolutionaryunitedfront.com/coronavirus/">
+                  here!
+                </a>
+                </p>
             </div>
             <div id="introDiv">
                 <h2 style="padding-bottom: 0px; margin-bottom: 0px;">BU Student Action</h2>
