removed public spreadsheet list

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                         href="https://forms.gle/ZD93XMMiNZmo6Rg17">this form!</a>
                 </p>
                 <h3>List of Participants</h3>
-                <p> <a
-                        href="https://docs.google.com/spreadsheets/d/15VRYRakuYmdk-PcwrY8dF-_O834ytPDt3E5m1v_HrQY/edit?usp=sharing ">Here</a>
+                <!--<p> <a
+                        href="">Here</a>
                     is a list of the responses of people particpating in the program. Feel free to try to find
                     people
                     that you can help / can help you and get in touch with them!
-                </p>
+                </p>-->
 
                 <h3>Donate to the Mutual Aid Fund</h3>
                 <p> If you have any spare funds that you are able to donate to people in financial need, please donate to our <a href="https://www.gofundme.com/f/98jv7-help-boston-students-and-residents-through-covid">gofundme!</a>
