removed "List of Participants"

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <p>If you are able to offer any help to people in the area, please fill out the <a
                         href="https://forms.gle/ZD93XMMiNZmo6Rg17">this form!</a>
                 </p>
-                <h3>List of Participants</h3>
-                <!--<p> <a
+                <!--<h3>List of Participants</h3>
+                <p> <a
                         href="">Here</a>
                     is a list of the responses of people particpating in the program. Feel free to try to find
                     people
