added new statement

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Acme|Cinzel|Merriweather|Oswald|Noto+Serif|Permanent+Marker|Roboto&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Abril+Fatface|Acme|Cinzel|Merriweather|Oswald|Noto+Serif|Permanent+Marker|Roboto&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -36,82 +38,93 @@
                 </p>-->
 
                 <h3>Donate to the Mutual Aid Fund</h3>
-                <p> If you have any spare funds that you are able to donate to people in financial need, please donate to our <a href="https://www.gofundme.com/f/98jv7-help-boston-students-and-residents-through-covid">gofundme!</a>
+                <p> If you have any spare funds that you are able to donate to people in financial need, please donate
+                    to our <a
+                        href="https://www.gofundme.com/f/98jv7-help-boston-students-and-residents-through-covid">gofundme!</a>
                 </p>
 
                 <h3>Remove From List</h3>
-                <p> If you no longer need / can give aid, please fill out <a href="https://forms.gle/vqkTaKbmbYXjaJVL8">this form!</a>
+                <p> If you no longer need / can give aid, please fill out <a
+                        href="https://forms.gle/vqkTaKbmbYXjaJVL8">this form!</a>
                 </p>
                 <h3>Contact Us!</h3>
                 <p>If you need more info or have any questions, email us at <a href="mailto:crmutaid@gmail.com">
-                  crmutaid@gmail.com
-                </a>!</p>
+                        crmutaid@gmail.com
+                    </a>!</p>
                 <h3>Related Organizations</h3>
                 <p>
-                People here in Boston aren't the only ones dealing with this crisis and getting organized. In the Bay
-                Area, which has one of the largest homeless populations in the country, people are getting organized to
-                push the city government to take care of homeless residents. <a
-                                                                               href="https://www.change.org/p/board-of-supervisors-alameda-county-alameda-and-sf-county-stop-all-evictions-during-the-covid-19-crisis">
-                  Sign their petition
-                </a> and consider <a href="https://www.gofundme.com/f/n3pe3-relief-for">
-                  donating to their mutual aid fund
-                </a>
+                    People here in Boston aren't the only ones dealing with this crisis and getting organized. In the
+                    Bay
+                    Area, which has one of the largest homeless populations in the country, people are getting organized
+                    to
+                    push the city government to take care of homeless residents. <a
+                        href="https://www.change.org/p/board-of-supervisors-alameda-county-alameda-and-sf-county-stop-all-evictions-during-the-covid-19-crisis">
+                        Sign their petition
+                    </a> and consider <a href="https://www.gofundme.com/f/n3pe3-relief-for">
+                        donating to their mutual aid fund
+                    </a>
                 </p>
                 <p>
-                The Revolutionary United Front has started a special blog with updates about Coronavirus
-                from a revolutionary political perspective. Check it out <a href="https://revolutionaryunitedfront.com/coronavirus/">
-                  here!
-                </a>
+                    The Revolutionary United Front has started a special blog with updates about Coronavirus
+                    from a revolutionary political perspective. Check it out <a
+                        href="https://revolutionaryunitedfront.com/coronavirus/">
+                        here!
+                    </a>
                 </p>
             </div>
             <div id="introDiv">
                 <h2 style="padding-bottom: 0px; margin-bottom: 0px;">BU Student Action</h2>
-                <p style="padding-top: 0px; margin-top: 0px;">BUSAU is holding a <a href="https://www.facebook.com/events/575569529716402/">protest against evicting students from their dorms</a></br></p>
+                <p style="padding-top: 0px; margin-top: 0px;">BUSAU is holding a <a
+                        href="https://www.facebook.com/events/575569529716402/">protest against evicting students from
+                        their dorms</a></br></p>
                 <hr>
                 <p id="intro">
-                    With the World Health Organization declaring the current Coronavirus (COVID-19) outbreak a global
-                    pandemic,
-                    and schools and universities closing and moving classes online, activists from various universities
-                    are mobilizing to provide mutual aid to students and other Boston-area residents who are in need of
-                    resources. For students who have been kicked off their campuses, we will try to provide housing and
-                    storage
-                    space, although this is limited. We will be pooling funds in a Mutual Aid Fund to purchase food,
-                    medical
-                    supplies, and other necessities, and organizing to provide these resources to the community.
+                    Charles River Mutual Aid Program (CRMAP) is a group of activists from across the Boston area who are
+                    mobilizing to provide mutual aid to residents in the area in need of resources. We are pooling funds
+                    in a Mutual Aid Fund to purchase food, medical supplies, and other necessities for people who
+                    request them, and organizing to provide these resources to the community. In addition, we seek to
+                    bring people together and partner with other organizations to help fight back against capitalism’s
+                    injustices during this crisis, injustices such as the predatory collection of unpayable rents at a
+                    time when tenants are losing their sources of income.
                     </br>
                 </p>
                 <p>
+                    As the Coronavirus (COVID-19) pandemic spreads like wildfire in the US, millions of people are being
+                    left out to dry. University students are being told to “think creatively” to find housing as they
+                    get evicted en masse. Businesses are shutting down and laying off their workers, meaning millions of
+                    working families are losing part or all of their income. Many businesses that remain open are
+                    putting their workers in hazardous conditions. Our profit-driven economy, which in normal times
+                    already fails to meet people’s basic needs, is proving to be especially catastrophic for the people
+                    in this time of crisis.
+                </p>
+                <p>
                     The current pandemic is something that we in the United States have never had to deal with before,
-                    and
-                    the
-                    times ahead will be difficult for millions of people. While our culture encourages
-                    us to withdraw from society and only “look out for number one”, we must fight back against the
-                    tendency
-                    to
+                    and the times ahead will be difficult for millions of people. While our culture encourages us to
+                    withdraw from society and “look out for number one”, we must fight back against the tendency to
                     isolate ourselves. Now more than ever, we must come together to support each other—students,
-                    workers,
-                    faculty, and community members alike—as the government becomes increasingly unable to provide basic
-                    resources. </br></br>
+                    workers, tenants, and everyone committed to justice—as the government becomes increasingly unable to
+                    provide basic resources.
                 </p>
                 <p>
                     We know the virus is going to affect some people more than others. The rich and the powerful will
-                    get
-                    it too, but they will have access to medical care and resources that <a
+                    catch it too, but at much lower rates due to their ability to protect themselves, and they will have
+                    access to medical care and resources that <a
                         href="https://www.kff.org/uninsured/issue-brief/key-facts-about-the-uninsured-population/">
                         tens millions of people in the U.S. do not have.
-                    </a> We know how the U.S. government handles similar situations - we saw Katrina in New Orleans,
-                    where
-                    white residents were evacuated and the majority-Black Ninth Ward was devastated. The hurricane
-                    itself was a natural
-                    disaster, but the effects it had on people were man-made.
+                    </a> . We
+                    know how the U.S. government handles similar situations - we saw hurricane Katrina in New Orleans,
+                    where white residents were evacuated and the majority-Black Ninth Ward was devastated. The hurricane
+                    itself was a natural disaster, but the effects it had on people were man-made.
                 </p>
                 <p>
-                    Join us in our Mutual Aid Program to serve the people and fight back against COVID-19! If we want to
-                    avoid a disaster we have to urgently organize to meet the needs of the people which the government
-                    and big institutions are going to neglect.
+                    Join us in our Mutual Aid Program, by volunteering or donating, to serve the people and fight back
+                    against COVID-19! If we want to help each other survive this disaster, we must urgently organize,
+                    and we must assert and address the needs of the people in opposition to the interests of the
+                    landlords, the bosses, and their government.
                 </p>
             </div>
         </div>
     </div>
 </body>
+
 </html>
