--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p>If you need more info or have any questions, email us at <a href="mailto:crmutaid@gmail.com">
                         crmutaid@gmail.com
                     </a>!</p>
-                <h3>Related Organizations</h3>
+                <!--<h3>Related Organizations</h3>
                 <p>
                     People here in Boston aren't the only ones dealing with this crisis and getting organized. In the
                     Bay
@@ -70,7 +70,7 @@
                         href="https://revolutionaryunitedfront.com/coronavirus/">
                         here!
                     </a>
-                </p>
+                </p>-->
             </div>
             <div id="introDiv">
                 <p id="intro">
