changed wording for request aid

--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
             <div id="links">
                 <h2>Links</h2>
                 <h3>Request Aid</h3>
-                <p>If you are looking for assistance from the community, please fill out the <a
-                        href="https://forms.gle/BsuShvyQSX24ksDdA">this form!</a>
+                <p>We are temporarily unable to keep servicing requests consistently/in a timely manner. Please feel
+                    free to still submit yourself through <a
+                    href="https://forms.gle/BsuShvyQSX24ksDdA">this request form</a>, but know that we are unsure how long it will
+                    take for us to find you relief aid. We hope to be able to catch up with any new requests soon!
+                    <!--If you are looking for assistance from the community, please fill out the <a
+                        href="https://forms.gle/BsuShvyQSX24ksDdA">this form!</a>-->
                 </p>
                 <h3>Offer Aid</h3>
                 <p>If you are able to offer any help to people in the area, please fill out the <a
